erDiagram
    %% User Management Layer
    USER {
        uuid id PK
        string clerk_id UK "Clerk authentication ID"
        string email UK "unique email address"
        string first_name
        string last_name
        string phone
        date date_of_birth
        enum last_name_visibility "FULL, INITIAL_ONLY, HIDDEN"
        timestamp created_at
        timestamp updated_at
    }

    TEAM {
        uuid id PK
        string name "team name"
        string short_name "abbreviation"
        string description
        string home_primary_color "home kit primary color"
        string home_secondary_color "home kit secondary color"
        string away_primary_color "away kit primary color"
        string away_secondary_color "away kit secondary color"
        string logo_url
        boolean is_managed "true = has roster, false = ad-hoc"
        timestamp created_at
        timestamp updated_at
    }

    TEAM_MEMBER {
        uuid id PK
        uuid team_id FK
        uuid user_id FK
        uuid invited_by_id FK "nullable - who invited this member"
        date joined_date "nullable"
        date left_date "null if still active"
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    TEAM_MEMBER_ROLE {
        uuid id PK
        uuid team_member_id FK
        enum role "OWNER, MANAGER, COACH, GUEST_COACH, PLAYER, GUARDIAN, FAN"
        jsonb role_data "role-specific data (jersey, position, title, etc)"
        timestamp created_at
        timestamp updated_at
    }

    TEAM_CONFIGURATION {
        uuid id PK
        uuid team_id FK
        uuid default_game_format_id FK
        string default_formation "4-4-2, 4-3-3, etc"
        integer default_game_duration "minutes"
        enum stats_tracking_level "FULL, SCORER_ONLY, GOALS_ONLY"
        timestamp created_at
        timestamp updated_at
    }

    %% Game Structure
    GAME_FORMAT {
        uuid id PK
        string name "11v11, 7v7, 5v5"
        string display_name
        string description
        integer players_per_side
        integer min_players
        integer duration_minutes
        boolean allows_substitutions
        integer max_substitutions
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    GAME {
        uuid id PK
        uuid game_format_id FK
        string name "game title"
        datetime scheduled_start
        datetime actual_start
        datetime first_half_end
        datetime second_half_start
        datetime actual_end
        datetime paused_at "null = not paused"
        string venue
        string weather_conditions
        text notes
        enum status "SCHEDULED, FIRST_HALF, HALFTIME, SECOND_HALF, COMPLETED, CANCELLED"
        enum stats_tracking_level "override for team default"
        integer duration_minutes "override for format default"
        timestamp created_at
        timestamp updated_at
    }

    GAME_TEAM {
        uuid id PK
        uuid game_id FK
        uuid team_id FK
        enum team_type "HOME, AWAY"
        string formation "4-4-2, 4-3-3, etc"
        integer final_score
        text tactical_notes
        timestamp created_at
        timestamp updated_at
    }

    %% Event System
    EVENT_TYPE {
        uuid id PK
        string code UK "unique event code"
        string name "goal, assist, card, substitution_in, substitution_out"
        string category "SCORING, DISCIPLINE, SUBSTITUTION, GAME_FLOW, etc"
        string description
        boolean requires_related_player "for assists, subs, etc"
        boolean is_team_event
        boolean is_positive
        json metadata_schema
        boolean is_active
        timestamp created_at
        timestamp updated_at
    }

    GAME_EVENT {
        uuid id PK
        uuid game_id FK
        uuid event_type_id FK
        uuid player_id FK "user who performed the action"
        uuid related_player_id FK "for assists, subs, etc"
        uuid recorded_by_user_id FK "user who recorded this event"
        uuid game_team_id FK "team context"
        uuid parent_event_id FK "for related events like assists"
        integer minute "game minute when event occurred"
        integer timestamp "game time in seconds"
        datetime real_time "actual wall clock time"
        string position "player position when event occurred"
        text notes "additional details"
        json metadata "flexible additional data"
        timestamp created_at
        timestamp updated_at
    }

    %% Relationships
    USER ||--o{ TEAM_MEMBER : "belongs to teams"
    USER ||--o{ GAME_EVENT : "performed action"
    USER ||--o{ GAME_EVENT : "recorded event"
    USER ||--o{ GAME_EVENT : "related player"

    TEAM ||--o{ TEAM_MEMBER : "has members"
    TEAM ||--|| TEAM_CONFIGURATION : "has default settings"
    TEAM ||--o{ GAME_TEAM : "participates in games"

    TEAM_MEMBER ||--o{ TEAM_MEMBER_ROLE : "has roles"
    TEAM_MEMBER ||--o| USER : "invited by"

    TEAM_CONFIGURATION ||--|| GAME_FORMAT : "default format"

    GAME_FORMAT ||--o{ GAME : "defines format"

    GAME ||--o{ GAME_TEAM : "team participation"
    GAME ||--o{ GAME_EVENT : "contains events"

    GAME_TEAM ||--o{ GAME_EVENT : "team context for events"

    EVENT_TYPE ||--o{ GAME_EVENT : "categorizes events"

    GAME_EVENT ||--o{ GAME_EVENT : "parent-child relationships"

